--- a/src/index.css
+++ b/src/index.css
@@ -2,63 +2,6 @@ body {
     margin: 20px;
 }
 
-nav {
-    height: 100%;
-}
-nav > ul {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    list-style: none;
-}
-
-nav > ul > li {
-    display: inline-flex;
-    text-align: center;
-    height: 100%;
-    width: 25%;
-}
-
-nav > ul > li > a {
-    text-decoration: none;
-    background: #fff;
-    width: 100%;
-    height: 100%;
-}
-
-
-nav > ul > li > a:hover {
-    background: #ddd;
-}
-
-
-nav > ul > li > a > span {
-    position: relative;
-    top: 25%;
-    bottom: 25%;
-
-}
-
-.header {
-    position: relative;
-    top: 0;
-    background: #dedede;
-    margin: 0 auto 20px auto;
-    width: 680px;
-    height: 50px;
-    display: block;
-}
-
-.footer {
-    position: relative;
-    background: #dedede;
-    width: 680px;
-    opacity: 0.8;
-    bottom: 0;
-    margin: 0 auto;
-    height: 90px;
-}
-
 .content {
     margin: 0 auto;
     width: 680px;
@@ -68,26 +11,10 @@ nav > ul > li > a > span {
     .content {
         width: 520px;
     }
-
-    .header {
-        width: 520px;
-    }
-
-    .footer {
-        width: 520px;
-    }
 }
 
 @media (max-width: 420px) {
     .content {
-        width: 380px;
-    }
-
-    .header {
-        width: 380px;
-    }
-
-    .footer {
         width: 380px;
     }
 }
@@ -98,15 +25,19 @@ nav > ul > li > a > span {
     background: whitesmoke;
     padding: 50px;
 }
-.listCategory{
+
+.listCategory {
     background: #fff;
+    width: 30%;
 }
 
-.itemSkill{
-    background: #000;
+.listCategory:not(:last-child) {
+    margin-right: 1.5%;
 }
-.listSkillLabel{
-    border: 1px solid #bb66d0;
+
+.listSkillLabel {
+    margin-bottom: 12px;
+    border: 2px solid #bb66d0;
     color: #bb66d0;
     border-radius: 8px;
     text-align: center;
@@ -116,29 +47,43 @@ nav > ul > li > a > span {
     z-index: 10;
     box-shadow: 0 0 12px gray;
 }
-.listFrameworkLabel{
-    border: 1px solid #bb66d0;
-    color: #bb66d0;
-    border-radius: 8px;
-    text-align: center;
-    padding: 5px;
-    width: fit-content;
-    min-width: 120px;
-    z-index: 10;
-    box-shadow: 0 0 12px gray;
-}
-.itemFramework{
-    background: #000;
+
+.itemSkill {
+    display: inline-flex;
+    margin-left: 0;
     color: #fff;
-    padding: 5px 10px;
+    background: #bb66d0;
+    border-radius: 20px;
+    border: 1px solid black;
+    padding: 5px;
     width: fit-content;
-    border: 1px dotted black;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    border-radius: 10px;
-    font-size: 14px;
 }
-.listToolLabel{
+
+.listFrameworkLabel {
+    margin-bottom: 12px;
+    border: 1px solid #66d0c7;
+    color: #66d0c7;
+    border-radius: 8px;
+    text-align: center;
+    padding: 5px;
+    width: fit-content;
+    min-width: 120px;
+    z-index: 10;
+    box-shadow: 0 0 12px gray;
+}
+
+.itemFramework {
+    display: inline-flex;
+    margin-left: 0;
+    color: #fff;
+    background: #66d0c7;
+    border-radius: 20px;
+    border: 1px solid black;
+    padding: 5px;
+    width: fit-content;
+}
+
+.listToolLabel {
     border: 1px solid #bb66d0;
     color: #bb66d0;
     border-radius: 8px;
@@ -150,9 +95,11 @@ nav > ul > li > a > span {
     box-shadow: 0 0 12px gray;
 }
 
-.itemTool{
+.itemTool {
+    margin-left: 0;
     background: #000;
 }
+
 .listItem {
     position: relative;
     padding: 10px;
@@ -163,6 +110,12 @@ nav > ul > li > a > span {
     background: #fff;
     z-index: 3;
     border-radius: 3px;
-
 }
 
+.skillContainer {
+    display: flex;
+}
+
+.portfolioItem {
+
+}
