skill表示部分の共通化

--- a/src/components/shared/input/select.css
+++ b/src/components/shared/input/select.css
@@ -28,6 +28,7 @@ select:-moz-focusring {
 
 .selectWrapper {
     max-width: 200px;
+    min-width: 200px;
     position: relative;
     background-color: #fff;
     -webkit-border-radius: 8px;
