--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
     margin: 20px;
     font-family: Arial, "メイリオ", serif;
-    color: #454545;
+    background: linear-gradient(-45deg, rgb(195, 55, 100), rgb(29, 38, 113));
+    background-size: cover;
 }
 
 .content {
